# reporter-command-center-backend

./: .gitignore  .golangci.yml  AGENTS.md  DEPLOY_AWS.md  Dockerfile  Makefile  QUALITY_GATE.md  README.md  ROADMAP.md  coverage.out  docker-compose.yml  go.mod  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  main.py
app/adapters/ai/: dummy.py
app/adapters/http/: deps.py  routes_audit.py  routes_auth.py  routes_collection.py  routes_directory.py  routes_integrations.py  routes_jobs.py  routes_org.py  routes_reporting.py  schemas.py
app/adapters/scheduler/: local.py
app/adapters/teams/: mock.py
app/application/services/: auth_service.py  collection_service.py  directory_service.py  integration_service.py  org_service.py  processing_service.py  reporting_service.py
app/domain/: entities.py  errors.py
app/infra/: logging.py  repos.py  secrets.py
app/infra/db/: base.py  models.py
app/infra/security/: auth_jwt.py  tenant.py
app/ports/: ai.py  auth.py  reporting.py  scheduler.py  teams.py
cmd/server/: main.go
deploy/: docker-compose.ec2.yml
internal/auth/: jwt.go
internal/config/: config.go
internal/domain/: types.go
internal/http/: handlers.go  middleware.go
internal/repo/: inmemory.go
tests/: conftest.py  helpers.py  test_auth.py  test_collection_reporting.py  test_directory.py  test_org.py
